feat: users can provide a custom mapper to the client
With this implementation users can provide a custom ObjectMapper to the
zeebe client, simply by create and configure the mapper in the test
class context. During the lifecycle of the tests, if a mapper is
configured, the zeebe client will use it.